[workspace]
members = [
    "bin/host",
    "bin/continuous",
    "bin/eth-proofs",
    "crates/executor/client",
    "crates/executor/host",
    "crates/mpt",
    "crates/primitives",
    "crates/provider",
    "crates/storage/rpc-db",
    "crates/storage/witness-db",
]
exclude = []
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
authors = ["puma314", "jtguibas", "rkrasiuk"]
repository = "https://github.com/moongate-forks/minimal-reth"
homepage = "https://github.com/moongate-forks/minimal-reth"
exclude = ["**/target"]
version = "0.1.0"

[workspace.dependencies]
tracing = { version = "0.1.40", default-features = false }
cfg-if = "1.0.0"
spin = { version = "0.9.8", features = ["mutex"] }
async-trait = "0.1.80"
tokio = { version = "1.21", default-features = false, features = [
    "rt",
    "rt-multi-thread",
] }
reqwest = "0.12.9"
serde_json = "1.0.94"
serde = { version = "1.0", default-features = false, features = ["derive"] }
futures = "0.3"
url = "2.3"
thiserror = "1.0.61"
hex-literal = "0.4.1"
rayon = "1.10.0"
rlp = "0.5.2"

# workspace
rsp-rpc-db = { path = "./crates/storage/rpc-db" }
rsp-witness-db = { path = "./crates/storage/witness-db" }
rsp-client-executor = { path = "./crates/executor/client" }
rsp-host-executor = { path = "./crates/executor/host" }
rsp-mpt = { path = "./crates/mpt" }
rsp-primitives = { path = "./crates/primitives" }
rsp-provider = { path = "./crates/provider" }


# sp1
sp1-build = "=6.2.4"
sp1-core-executor = { version = "=6.2.4", features = ["bigint-rug"] }
sp1-prover = "=6.2.4"
sp1-sdk = { version = "=6.2.4", features = ["profiling"] }

# reth
reth-primitives-traits = { version = "0.3.2", default-features = false }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-consensus-common = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-evm = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-storage-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-trie = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-execution-types = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-errors = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth", tag = "v2.2.0", default-features = false, features = ["serde"] }

# revm
revm = { version = "38.0.0", features = [
    "serde",
    "bn"
], default-features = false }
revm-bytecode = { version = "10.0.0", default-features = false }
revm-state = { version = "11.0.0", default-features = false }
revm-primitives = { version = "23.0.0", features = [
    "serde",
], default-features = false }
revm-interpreter = { version = "35.0.0", default-features = false }
revm-database = { version = "13.0.0", default-features = false }
revm-database-interface = { version = "11.0.0", default-features = false }

revm-inspectors = "0.32.0"

# alloy
alloy-chains = { version = "0.2.17", default-features = false }
alloy-evm = { version = "0.34.0", default-features = false }
alloy-primitives = { version = "1.5.6", default-features = false, features = ["map-foldhash"] }
alloy-provider = { version = "2.0.4", default-features = false, features = [
    "reqwest",
    "reqwest-rustls-tls",
] }
alloy-rpc-types = { version = "2.0.4", default-features = false, features = [
    "eth",
] }
alloy-rpc-types-debug = { version = "2.0.4", default-features = false }

alloy-json-rpc = { version = "2.0.4", default-features = false }
alloy-genesis = { version = "2.0.4", default-features = false, features = ["serde-bincode-compat"] }
alloy-consensus = { version = "2.0.4", default-features = false, features = ["serde", "serde-bincode-compat"] }
alloy-network = { version = "2.0.4", default-features = false }
alloy-transport = { version = "2.0.4", default-features = false }
alloy-transport-http = { version = "2.0.4", features = [
    "reqwest-rustls-tls",
], default-features = false }
alloy-transport-ws = { version = "2.0.4" }
alloy-rpc-client = { version = "2.0.4", default-features = false }
alloy-eips = { version = "2.0.4", default-features = false }
alloy-serde = "2.0.4"
alloy-rlp = "0.3.12"
alloy-trie = "0.9.3"

kzg-rs = "0.2.8"


[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rustdoc.all = "warn"

[patch.crates-io]
# Precompile patches
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-6.0.0", package = "sha2" }
bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-6.0.0", package = "substrate-bn-succinct-rs" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.11.0-sp1-6.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-6.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-6.0.0" }
