[package]
name = "rsp-mpt"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rlp.workspace = true
serde.workspace = true
thiserror.workspace = true

# reth
reth-primitives-traits.workspace = true
reth-trie.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-rpc-types.workspace = true
alloy-rpc-types-debug = { workspace = true, optional = true }

# arena mpt
bumpalo.workspace = true
smallvec.workspace = true
bytes.workspace = true

[dev-dependencies]
hex-literal.workspace = true
bincode = "1.3"

[features]
default = ["execution-witness"]
execution-witness = ["dep:alloy-rpc-types-debug"]
