[package]
name = "rsp-primitives"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
serde_with = "3.12.0"

# reth
reth-primitives-traits.workspace = true
reth-chainspec.workspace = true
reth-optimism-chainspec = { workspace = true, optional = true }
reth-optimism-forks = { workspace = true, optional = true }
reth-trie.workspace = true

# alloy
alloy-primitives.workspace = true
alloy-eips.workspace = true
alloy-genesis.workspace = true
alloy-rpc-types.workspace = true
alloy-serde.workspace = true

[dev-dependencies]
bincode = "1.3.3"

[features]
optimism = [
    "dep:reth-optimism-chainspec",
    "dep:reth-optimism-forks",
]