[package]
name = "rsp-client-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_with = "3.12.0"
itertools = "0.13.0"

# workspace
rsp-mpt.workspace = true
bumpalo = "3.19.0"
rsp-primitives.workspace = true

# reth
reth-consensus.workspace = true
reth-consensus-common.workspace = true
reth-ethereum-consensus.workspace = true
reth-ethereum-primitives.workspace = true
reth-execution-types.workspace = true
reth-primitives-traits.workspace = true
reth-trie.workspace = true
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true
kzg-rs.workspace = true

# alloy
alloy-eips.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-consensus.workspace = true
alloy-network.workspace = true
alloy-rpc-types.workspace = true

# sp1 BLS12-381 precompile-backed curve crate (Tier 3: EIP-2537 BLS overrides).
sp1-bls12-381.workspace = true


[features]
default = ["sha3-keccak"]
sha3-keccak = ["alloy-primitives/sha3-keccak"]
native-keccak = ["alloy-primitives/native-keccak"]