[package]
name = "rsp-host-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true

# workspace
rsp-rpc-db.workspace = true
rsp-client-executor ={ workspace = true, features = ["optimism"] }
rsp-mpt = { workspace = true, features = ["preimage_context"] }

# reth
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-optimism-evm = { workspace = true }
reth-optimism-primitives = { workspace = true }
reth-optimism-chainspec = { workspace = true }
reth-primitives = { workspace = true, features = ["secp256k1"] }
reth-primitives-traits.workspace = true
reth-trie.workspace = true
reth-execution-types.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-consensus.workspace = true
alloy-genesis.workspace = true
alloy-primitives.workspace = true
alloy-rlp.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
alloy-genesis.workspace = true
op-alloy-network.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
bincode = "1.3.3"
dotenv = "0.15.0"

