[package]
name = "rsp-host-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["time", "rt"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["json"], optional = true }
eyre = "0.6.12"
bincode = "1.3.3"
either = "1.13.0"

# workspace
rsp-rpc-db.workspace = true
rsp-client-executor = { workspace = true, features = ["optimism"] }
rsp-mpt = { workspace = true, features = ["preimage_context"] }
rsp-primitives = { workspace = true, features = ["optimism"] }

# sp1
sp1-sdk.workspace = true
sp1-prover.workspace = true

# reth
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-optimism-evm = { workspace = true }
reth-optimism-chainspec = { workspace = true }
reth-optimism-primitives.workspace = true
reth-primitives = { workspace = true, features = ["secp256k1"] }
reth-primitives-traits.workspace = true
reth-trie.workspace = true
reth-execution-types.workspace = true
reth-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-evm.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types.workspace = true

# op
op-alloy-network.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
bincode = "1.3.3"
dotenv = "0.15.0"

[features]
alerting = ["dep:reqwest"]