[package]
name = "rsp-host-executor"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["time", "rt"] }
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
url.workspace = true
reqwest = { workspace = true, features = ["json"], optional = true }
eyre = "0.6.12"
bincode = "1.3.3"
either = "1.13.0"

# workspace
# `execution-witness` is on so both state backends are compiled in; which one is used is a
# runtime choice (`StateBackend` in `Config`), not a cargo feature.
rsp-rpc-db = { workspace = true, features = ["execution-witness"] }
rsp-client-executor = { workspace = true }
rsp-mpt = { workspace = true }
rsp-primitives = { workspace = true }

# sp1
sp1-sdk.workspace = true

# reth
reth-evm.workspace = true
reth-evm-ethereum.workspace = true
reth-ethereum-primitives.workspace = true
reth-primitives-traits  = { workspace = true, features = ["secp256k1"] }
reth-trie.workspace = true
reth-errors.workspace = true
reth-storage-errors.workspace = true
reth-chainspec.workspace = true

# revm
revm.workspace = true
revm-primitives.workspace = true

# alloy
alloy-chains.workspace = true
alloy-consensus.workspace = true
alloy-primitives.workspace = true
alloy-network.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rpc-types.workspace = true

[dev-dependencies]
alloy-primitives.workspace = true
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
url.workspace = true
bincode = "1.3.3"
dotenv = "0.15.0"

[features]
cuda = ["sp1-sdk/cuda"]
alerting = ["dep:reqwest"]
# Emit the arena-codec witness (zero-copy) instead of the default bincode `EthereumState`.
# Must match how the `rsp-client` guest ELF is built (see the host binaries' build.rs).
arena = ["rsp-client-executor/arena"]