[package]
name = "rsp-rpc-db"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true

rsp-mpt.workspace = true
rsp-primitives.workspace = true

async-trait.workspace = true

# reth
reth-storage-errors.workspace = true

# revm
revm-database.workspace = true
revm-database-interface.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true

# alloy
alloy-consensus = { workspace = true, optional = true }
alloy-primitives.workspace = true
alloy-provider.workspace = true
alloy-transport.workspace = true
alloy-rlp = { workspace = true, optional = true }
alloy-trie = { workspace = true, optional = true, features = ["ethereum"] }

[features]
default = ["execution-witness"]
execution-witness = [
    "dep:alloy-consensus", 
    "dep:alloy-rlp",
    "dep:alloy-trie",
    "alloy-provider/debug-api"
]
