[package]
name = "rsp-witness-db"
description = ""
version.workspace = true
edition.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
serde.workspace = true

# alloy
alloy-primitives.workspace = true

# reth
reth-primitives.workspace = true
reth-storage-errors.workspace = true

# revm
revm-database-interface.workspace = true
revm-primitives.workspace = true
revm-state.workspace = true