[workspace]

[package]
name = "sp1-mpt-bench-program"
version = "0.1.0"
edition = "2021"

[dependencies]
sp1-zkvm = "=6.2.1"

# The MPT crate under test, with the experimental arena implementation enabled.
rsp-mpt = { path = "../../../crates/mpt", default-features = false }

bumpalo = { version = "3.19.0", features = ["collections"] }
# `sha3-keccak` routes keccak256 through the SP1-patched `sha3` crate (the keccak precompile),
# matching how the real RSP client hashes — otherwise keccak runs in software and dominates.
# Version matches the main workspace (1.5.7) so `sha3` resolves to 0.10.8, which the patch covers.
alloy-primitives = { version = "=1.5.7", default-features = false, features = ["sha3-keccak"] }

# Statically turn off logging inside the guest.
log = { version = "0.4", features = ["max_level_off", "release_max_level_off"] }
tracing = { version = "0.1", features = ["max_level_off", "release_max_level_off"] }

[patch.crates-io]
# SP1 precompile patches (same set as `bin/client`).
sha2 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha2-0.10.9-sp1-6.0.0", package = "sha2" }
substrate-bn = { git = "https://github.com/sp1-patches/bn", tag = "patch-0.6.0-sp1-6.0.0-substrate-bn" }
sha3 = { git = "https://github.com/sp1-patches/RustCrypto-hashes", tag = "patch-sha3-0.10.8-sp1-6.0.0" }
k256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-k256-13.4-sp1-6.0.0" }
p256 = { git = "https://github.com/sp1-patches/elliptic-curves", tag = "patch-p256-13.2-sp1-6.0.0" }
